# pdf-concatenator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pdf_concatenator/: __init__.py  cli.py  color_parse.py  config.py  discovery.py  llm.py  pdf_build.py  sidecar.py  size_estimate.py  size_parse.py  split.py  summaries.py
tests/: conftest.py  helpers.py  test_cli.py  test_color_parse.py  test_config.py  test_discovery.py  test_llm.py  test_pdf_build.py  test_sidecar.py  test_size_estimate.py  test_size_parse.py  test_split.py  test_wrap.py
