[project]
name = "pdf-concatenator"
version = "0.1.0"
description = "Concatenate PDFs with table of contents, cover pages, and optional LLM summaries"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pypdf>=4.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
pdf-concatenator = "pdf_concatenator.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
