[project]
name = "pdf-concatenator"
version = "1.0.0"
description = "Concatenate PDFs with table of contents, cover pages, and optional LLM summaries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Lorenzo Wood" }]
keywords = ["pdf", "concatenate", "merge", "toc", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "httpx>=0.27",
    "pypdf>=4.0",
    "reportlab>=4.0",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/lorenzowood/pdf-concatenator"
Repository = "https://github.com/lorenzowood/pdf-concatenator"
Issues = "https://github.com/lorenzowood/pdf-concatenator/issues"

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "twine>=5.0",
]

[project.scripts]
pdf-concatenator = "pdf_concatenator.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
